[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/LevelSelect.jpg" type="Texture" id=1]
[ext_resource path="res://ui_scenes/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/button.tres" type="DynamicFont" id=3]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Sprite" parent="."]
position = Vector2( 523.814, 320.657 )
scale = Vector2( 0.181668, 0.179517 )
texture = ExtResource( 1 )

[node name="1" type="Button" parent="LevelSelect"]
anchor_left = -0.000671188
anchor_top = 0.00101876
anchor_right = -0.000671188
anchor_bottom = 0.00101876
margin_left = -712.522
margin_top = -528.587
margin_right = 479.478
margin_bottom = -269.587
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="LevelSelect"]
margin_left = -719.067
margin_top = -216.894
margin_right = 472.933
margin_bottom = 42.1064
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Button" parent="LevelSelect"]
margin_left = -712.521
margin_top = 92.8455
margin_right = 479.479
margin_bottom = 351.845
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Button" parent="LevelSelect"]
margin_left = -708.153
margin_top = 402.088
margin_right = 483.847
margin_bottom = 661.088
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="LevelSelect"]
margin_left = -708.153
margin_top = 716.0
margin_right = 483.847
margin_bottom = 975.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 47.7496
margin_top = 38.8633
margin_right = 95.7496
margin_bottom = 78.8633
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LevelSelect/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="LevelSelect/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="LevelSelect/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="LevelSelect/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="LevelSelect/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
